✨ Javers 인메모리 사용해서 객체 비교하게 변경

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,4 +1,9 @@
 spring:
+  javers:
+    sql-schema-management-enabled: false
+  lifecycle:
+    timeout-per-shutdown-phase: 30s
+
   session:
     store-type: jdbc
     jdbc:
@@ -58,3 +63,6 @@ cloud:
 
 user:
   default-password: ${USER_DEFAULT_PASSWORD}
+
+server:
+  shutdown: graceful
