--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -30,7 +30,7 @@ spring:
   # JPA 및 Hibernate 설정
   jpa:
     hibernate:
-      ddl-auto: create         # 테이블을 삭제하지 않고 데이터베이스 스키마 자동 업데이트
+      ddl-auto: update         # 테이블을 삭제하지 않고 데이터베이스 스키마 자동 업데이트
     show-sql: true             # 콘솔에 SQL 문 로그 출력 활성화
     properties:
       hibernate:
@@ -53,6 +53,8 @@ management:
   endpoint:
     health:
       show-details: always     # health 엔드포인트에서 항상 상세 상태 정보 표시
+    shutdown:
+      enabled: true
 
 # Swagger API 문서 서버 URL
 swagger:
