--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,13 +40,24 @@ jobs:
       - name: 🚀 EC2에서 무중단 배포
         run: |
           ssh ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }} << 'EOF'
+            # 포트 8081 정리
+            pkill -f "server.port=8081" 2>/dev/null || true
+            sleep 2
+          
             # 새 JAR로 임시 애플리케이션 시작 (다른 포트)
-            nohup java -jar /home/ubuntu/app-new.jar --server.port=8081 > /dev/null 2>&1 &
+            nohup java -jar /home/ubuntu/app-new.jar --server.port=8081 > /tmp/app-new.log 2>&1 &
             NEW_PID=$!
           
-            # 새 애플리케이션 헬스체크 (최대 30초 대기)
+            # PID 확인
+            if ! kill -0 $NEW_PID 2>/dev/null; then
+              echo "애플리케이션 시작 실패"
+              cat /tmp/app-new.log
+              exit 1
+            fi
+          
+            # 새 애플리케이션 헬스체크 (최대 60초 대기)
             HEALTH_CHECK_SUCCESS=false
-            for i in {1..6}; do
+            for i in {1..12}; do
               if curl -f http://localhost:8081/health > /dev/null 2>&1; then
                 HEALTH_CHECK_SUCCESS=true
                 break
@@ -56,8 +67,9 @@ jobs:
           
             # 헬스체크 실패시 롤백
             if [ "$HEALTH_CHECK_SUCCESS" = false ]; then
+              echo "헬스체크 실패 - 로그 확인:"
+              tail -20 /tmp/app-new.log
               kill $NEW_PID 2>/dev/null || true
-              rm -f /home/ubuntu/app-new.jar
               exit 1
             fi
           
@@ -73,6 +85,6 @@ jobs:
             kill $NEW_PID 2>/dev/null || true
           
             pm2 save
-            sleep 3
-            curl --retry 5 --retry-delay 2 http://localhost:8080/health > /dev/null 2>&1 || exit 1
+            sleep 5
+            curl --retry 3 --retry-delay 3 http://localhost:8080/health > /dev/null 2>&1 || exit 1
           EOF
