--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,7 +94,7 @@ jobs:
             # 기존 PM2 애플리케이션 교체
             mv /home/ubuntu/app-new.jar /home/ubuntu/app-latest.jar
             if pm2 list | grep -q "app.*online"; then
-              pm2 reload ecosystem.config.js --update-env --wait-ready
+              pm2 reload ecosystem.config.js --update-env
             else
               pm2 start ecosystem.config.js
             fi
