--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
             cp /home/ubuntu/app-new.jar /tmp/app-new.jar
 
             # 새 애플리케이션을 pm2로 포트 8081에서 시작
-            JAR_PATH="/tmp/app-new.jar" pm2 start ecosystem.config.js --name "app-new" -- --server.port=8081
+            pm2 start java --name app-new -- -jar /tmp/app-new.jar --server.port=8081
 
             # pm2가 app-new를 온라인 상태로 만들 때까지 최대 30초 대기 (6회, 5초 간격)
             for i in {1..6}; do
@@ -90,9 +90,14 @@ jobs:
               echo "✅ app-new 헬스체크 통과 → 기존 app 교체 시작"
               mv /home/ubuntu/app-new.jar /home/ubuntu/app-latest.jar
 
-              # 기존 app 종료 및 새 앱 이름 변경하여 교체
+              # 기존 app 종료
               pm2 delete app 2>/dev/null || true
-              pm2 restart app-new --name app --update-env
+
+              # 기존 app-new 종료 (안전하게)
+              pm2 delete app-new 2>/dev/null || true
+
+              # 새 jar 파일로 app 재시작 (포트 8080)
+              pm2 start java --name app -- -jar /home/ubuntu/app-latest.jar --server.port=8080
             fi
 
             # 최종 헬스 체크 1회 성공 (포트 8080, 최대 60초)
