--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,75 +37,103 @@ jobs:
       - name: 📦 JAR 파일 EC2로 전송
         run: rsync -avz --progress build/libs/*.jar ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }}:/home/ubuntu/app-new.jar
 
-      - name: 🔧 JAR 파일 권한 및 소유자 설정
+      - name: 🔧 JAR 파일 권한 설정
         run: ssh ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }} "chmod 644 /home/ubuntu/app-new.jar"
 
-      - name: 🚀 EC2에서 무중단 배포
+      - name: 🚀 EC2 무중단 배포 및 Nginx 포트 스위칭
         run: |
-          ssh ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }} << 'EOF'
-            # 새 JAR를 임시 위치로 복사 (안전한 작업)
-            cp /home/ubuntu/app-new.jar /tmp/app-new.jar
-          
-            # 새 애플리케이션을 pm2 ecosystem으로 포트 8081에서 시작
-            pm2 delete app-new 2>/dev/null || true
-            pm2 start ecosystem.config.js --only app-new
+          ssh ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }} bash -s << 'EOF'
+            set -euo pipefail
 
-            # pm2가 app-new를 온라인 상태로 만들 때까지 최대 30초 대기 (6회, 5초 간격)
-            for i in {1..6}; do
-              if pm2 list | grep -q "app-new.*online"; then
-                break
-              fi
-              sleep 5
-            done
+            APP_NEW_JAR="/home/ubuntu/app-new.jar"
+            APP_LATEST_JAR="/home/ubuntu/app-latest.jar"
+            PM2_APP_NAME_NEW="app-new"
+            PM2_APP_NAME_OLD="app"
+            NGINX_CONF="/etc/nginx/conf.d/erp.conf"
+            PORT_1=8080
+            PORT_2=8081
 
-            # app-new가 온라인 상태가 아니면 실패 처리
-            if ! pm2 list | grep -q "app-new.*online"; then
-              echo "애플리케이션 시작 실패"
-              pm2 logs app-new --lines 50
-              pm2 delete app-new 2>/dev/null || true
+            function wait_for_pm2_online() {
+              local app_name=$1
+              local retries=6
+              local wait_sec=5
+              for i in $(seq 1 $retries); do
+                if pm2 list | grep -q "${app_name}.*online"; then
+                  return 0
+                fi
+                sleep $wait_sec
+              done
+              return 1
+            }
+
+            function health_check() {
+              local port=$1
+              local retries=12
+              local wait_sec=5
+              for i in $(seq 1 $retries); do
+                if curl -sf "http://localhost:${port}/actuator/health" > /dev/null; then
+                  return 0
+                fi
+                sleep $wait_sec
+              done
+              return 1
+            }
+
+            echo "▶ 새 JAR를 임시 위치로 복사"
+            cp "$APP_NEW_JAR" /tmp/app-new.jar
+
+            echo "▶ 새 애플리케이션($PM2_APP_NAME_NEW)을 포트 $PORT_2에서 pm2로 시작"
+            pm2 delete "$PM2_APP_NAME_NEW" 2>/dev/null || true
+            pm2 start ecosystem.config.js --only "$PM2_APP_NAME_NEW"
+
+            echo "▶ pm2 온라인 상태 대기..."
+            if ! wait_for_pm2_online "$PM2_APP_NAME_NEW"; then
+              echo "❌ $PM2_APP_NAME_NEW pm2 온라인 상태 진입 실패"
+              pm2 logs "$PM2_APP_NAME_NEW" --lines 50
+              pm2 delete "$PM2_APP_NAME_NEW" 2>/dev/null || true
               exit 1
             fi
 
-            # 헬스 체크 1회 성공 조건 (포트 8081, 최대 60초)
-            HEALTH_CHECK_SUCCESS=false
-            for i in {1..12}; do
-              if curl -f http://localhost:8081/actuator/health > /dev/null 2>&1; then
-                HEALTH_CHECK_SUCCESS=true
-                break
-              fi
-              sleep 5
-            done
-
-            if [ "$HEALTH_CHECK_SUCCESS" = false ]; then
-              echo "헬스체크 실패 - 로그 확인:"
-              pm2 logs app-new --lines 50
-              pm2 delete app-new 2>/dev/null || true
+            echo "▶ 헬스 체크 포트 $PORT_2 시작"
+            if ! health_check $PORT_2; then
+              echo "❌ 헬스체크 실패 (포트 $PORT_2)"
+              pm2 logs "$PM2_APP_NAME_NEW" --lines 50
+              pm2 delete "$PM2_APP_NAME_NEW" 2>/dev/null || true
               exit 1
+            fi
+
+            echo "✅ $PM2_APP_NAME_NEW 헬스체크 통과, Nginx 프록시 포트 전환 시작"
+
+            CURRENT_PORT=$(sudo grep -oP 'proxy_pass http://localhost:\K[0-9]+' "$NGINX_CONF")
+            if [ "$CURRENT_PORT" == "$PORT_1" ]; then
+              NEW_PORT=$PORT_2
+              OLD_APP=$PM2_APP_NAME_OLD
+              NEW_APP=$PM2_APP_NAME_NEW
             else
-              echo "✅ app-new 헬스체크 통과 → Nginx 프록시 포트 동적 전환 시작"
-              CURRENT_PORT=$(sudo grep -oP 'proxy_pass http://localhost:\K[0-9]+' /etc/nginx/conf.d/erp.conf)
-              if [ "$CURRENT_PORT" = "8080" ]; then
-                NEW_PORT=8081
-              else
-                NEW_PORT=8080
-              fi
-              sudo sed -i "s/proxy_pass http:\/\/localhost:[0-9]\+/proxy_pass http:\/\/localhost:${NEW_PORT}/" /etc/nginx/conf.d/erp.conf
-              sudo nginx -s reload
-
-              mv /home/ubuntu/app-new.jar /home/ubuntu/app-latest.jar
-              # 기존 app-new 종료는 하지 않고 유지 (필요시 수동 종료)
-              # 기존 app도 종료하지 않고 둠 (트래픽은 8081로 넘어감)
+              NEW_PORT=$PORT_1
+              OLD_APP=$PM2_APP_NAME_NEW
+              NEW_APP=$PM2_APP_NAME_OLD
             fi
 
-            # 최종 헬스 체크 1회 성공 (포트 8080, 최대 60초)
-            for i in {1..12}; do
-              if curl -f http://localhost:8080/actuator/health > /dev/null 2>&1; then
-                exit 0
-              fi
-              sleep 5
-            done
+            echo "▶ 현재 Nginx 프록시 포트: $CURRENT_PORT, 변경할 포트: $NEW_PORT"
 
-            echo "최종 헬스체크 실패"
-            pm2 logs app --lines 50
-            exit 1
+            sudo sed -i "s/proxy_pass http:\/\/localhost:[0-9]\+/proxy_pass http:\/\/localhost:${NEW_PORT}/" "$NGINX_CONF"
+            sudo nginx -s reload
+            echo "▶ Nginx 리로드 완료"
+
+            echo "▶ 이전 포트($CURRENT_PORT)에서 실행 중인 앱($OLD_APP) 종료"
+            pm2 delete "$OLD_APP" 2>/dev/null || true
+
+            echo "▶ 최신 JAR로 교체"
+            mv "$APP_NEW_JAR" "$APP_LATEST_JAR"
+
+            echo "▶ 최종 헬스 체크 포트 $NEW_PORT"
+            if ! health_check $NEW_PORT; then
+              echo "❌ 최종 헬스체크 실패 (포트 $NEW_PORT)"
+              pm2 logs "$NEW_APP" --lines 50
+              exit 1
+            fi
+
+            echo "✅ 무중단 배포 완료"
+            exit 0
           EOF
