--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
             echo "▶ 새 JAR를 임시 위치로 복사"
             cp "$APP_NEW_JAR" /tmp/app-new.jar
 
-            CURRENT_PORT=$(sudo grep -oP 'proxy_pass http://localhost:\K[0-9]+' "$NGINX_CONF")
+            CURRENT_PORT=$(sudo grep -oP 'proxy_pass http://127.0.0.1:\K[0-9]+' "$NGINX_CONF" 2>/dev/null || echo "$PORT_1")
             if [ "$CURRENT_PORT" == "$PORT_1" ]; then
               NEW_PORT=$PORT_2
               OLD_APP=$PM2_APP_NAME_OLD
@@ -119,7 +119,7 @@ jobs:
 
             echo "✅ $NEW_APP 헬스체크 통과, Nginx 프록시 포트 전환 시작"
 
-            sudo sed -i "s/proxy_pass http:\/\/localhost:[0-9]\+/proxy_pass http:\/\/localhost:${NEW_PORT}/" "$NGINX_CONF"
+            sudo sed -i "s/proxy_pass http:\/\/127.0.0.1:[0-9]\+/proxy_pass http:\/\/127.0.0.1:${NEW_PORT}/" "$NGINX_CONF"
             sudo nginx -s reload
             echo "▶ Nginx 리로드 완료"
 
