--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
 
             function health_check() {
               local port=$1
-              local retries=6
+              local retries=10
               local wait_sec=3
               for i in $(seq 1 $retries); do
                 if curl -sf "http://localhost:${port}/actuator/health" > /dev/null; then
@@ -114,6 +114,9 @@ jobs:
               pm2 delete "$NEW_APP" 2>/dev/null || true
               exit 1
             fi
+
+            echo "▶ 헬스 체크 통과 후 앱 안정화 대기 10초"
+            sleep 10
 
             echo "✅ $NEW_APP 헬스체크 통과, Nginx 프록시 포트 전환 시작"
 
