--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,7 @@ jobs:
               local retries=10
               local wait_sec=3
               for i in $(seq 1 $retries); do
-                if curl -sf "http://localhost:${port}/actuator/health" > /dev/null; then
+                if curl -s "http://localhost:${port}/actuator/health" | grep -q '"status":"UP"'; then
                   return 0
                 fi
                 sleep $wait_sec
@@ -108,6 +108,8 @@ jobs:
             fi
 
             echo "▶ 헬스 체크 포트 $NEW_PORT 시작"
+            echo "▶ 헬스 체크 전 5초 대기"
+            sleep 5
             if ! health_check $NEW_PORT; then
               echo "❌ 헬스체크 실패 (포트 $NEW_PORT)"
               pm2 logs "$NEW_APP" --lines 50
@@ -115,8 +117,8 @@ jobs:
               exit 1
             fi
 
-            echo "▶ 헬스 체크 통과 후 앱 안정화 대기 10초"
-            sleep 10
+            echo "▶ 헬스 체크 통과 후 앱 안정화 대기 5초"
+            sleep 5
 
             echo "✅ $NEW_APP 헬스체크 통과, Nginx 프록시 포트 전환 시작"
 
