--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -42,6 +42,7 @@ spring:
     open-in-view: false        # 지연 로딩 문제 방지를 위해 Open Session in View 패턴 비활성화
 
 server:
+  port: ${SERVER_PORT:8080}
   shutdown: graceful
 # 관리 엔드포인트 설정
 management:
