--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -19,6 +19,9 @@ spring:
     baseline-on-migrate: false
     locations: classpath:db/migration
 
+server:
+  port: ${SERVER_PORT:8080}
+
 logging:
   level:
     root: INFO
